tests/paczka1/fuzzy1/17343433.err
Error in line 1: pag S232 55,4
Error in line 5: ooO8uOLTM5 S953 71,1
Error in line 9: ooO8uOLTM5 S139 27,3
Error in line 2: pag A963 75,0
Error in line 33: aM9 S232 89,16
Error in line 27: pag S232 36,9
